sna/gen6: Flush the pipeline before effecting a change of blend modes

... also make sure that we flush if we change the blend mode for the CA pass.

Reported-by: Ivan Bulatovic <combuster@archlinux.us>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=37946
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>